Docs -training: findings scrub

--- a/site/about/contributing/style-guide/voice-and-tone.qmd
+++ b/site/about/contributing/style-guide/voice-and-tone.qmd
@@ -43,7 +43,7 @@ Behind every page, there’s a person. In every word, lies an opportunity to win
 
 | Correct | Incorrect | 
 |------|-----|
-|   **User acknowledgement:** Documenting findings can be difficult and tedious for even the most seasoned of validators.  |  **User dismissal:** For experienced validators, documenting findings is a breeze.  |
+|   **User acknowledgement:** Documenting artifacts can be difficult and tedious for even the most seasoned of validators.  |  **User dismissal:** For experienced validators, documenting artifacts is a breeze.  |
 | **Success toast:** Nice work — you’ve successfully registered your first model! | **Inappropriate humor:** We lost your model documentation, oops! Here, have a pony! (e.g. error message for serious issue) |
 : **Empathy & humor** examples {.hover}
 
@@ -64,7 +64,7 @@ Enable value for your audience, by empowering them.
 
 | Correct | Incorrect | 
 |------|-----|
-|   The findings are then submitted to the chair of the MRMG (model risk management group), who will then review the recommendations and provide their status assessments.  |  The findings are then submitted to the chairman of the MRMG, who will then review the recommendations and provide his status assessments.  |
+|   The artifacts are then submitted to the chair of the MRMG (model risk management group), who will then review the recommendations and provide their status assessments.  |  The artifacts are then submitted to the chairman of the MRMG, who will then review the recommendations and provide his status assessments.  |
 | `![Validation report section 2.1.1. that shows a compliance assessment with the option to link to evidence](link-evidence.png){fig-alt="A screenshot of the validation report section 2.1.1. that shows a compliance assessment with the option to link to evidence"}` | `![](link-evidence.png)` |
 : **Bias-free communication & inclusivity** examples {.hover}
 
