--- a/site/about/glossary/key_concepts/_template.qmd
+++ b/site/about/glossary/key_concepts/_template.qmd
@@ -4,4 +4,4 @@ documentation template
 validation report template
 : Serves as a standardized framework for conducting and documenting model validation activities. It outlines the required sections, recommended analyses, and expected validation tests, ensuring consistency and completeness across validation reports. The template helps guide validators through a systematic review process while promoting comparability and traceability of validation outcomes.
 
-    {{< var vm.product >}} templates come with pre-defined sections, similar to test placeholders, including boilerplates and spaces designated for test results, evidence, or findings.
+    {{< var vm.product >}} templates come with pre-defined sections, similar to test placeholders, including boilerplates and spaces designated for test results, evidence, or artifacts.
