--- a/site/about/glossary/monitoring/_reporting-and-governance.qmd
+++ b/site/about/glossary/monitoring/_reporting-and-governance.qmd
@@ -1,2 +1,2 @@
 reporting and governance  
-: The documentation of monitoring findings and communication to stakeholders to support decision-making and maintain transparency.
+: The documentation of monitoring artifacts and communication to stakeholders to support decision-making and maintain transparency.
