--- a/site/about/overview-model-risk-management.qmd
+++ b/site/about/overview-model-risk-management.qmd
@@ -32,7 +32,7 @@ The {{< var vm.platform >}} employs a multi-tenant architecture, hosting the clo
 With the {{< var vm.platform >}}, you can:
 
 - **Track your model inventory**[^1] — Manage the model lifecycle, track the workflow status for models, plan for upcoming validation dates, and more.
-- **Work on validation initiatives**[^2] — Collaborate with developers and validators to review documentation, add findings, keep track of review statuses, and generate validation reports.
+- **Work on validation initiatives**[^2] — Collaborate with developers and validators to review documentation, add artifacts, keep track of review statuses, and generate validation reports.
 - **Configure workflows**[^3] — Set up the {{< var validmind.platform >}} to follow your existing model risk management processes, manage statuses for different parts of the workflow, and get an end-to-end view of workflows and who is involved.
 - **Use, create, or edit tests, test suites, and templates**[^4] — Create and/or configure required validation tests, test suites, and documentation templates for specific model use cases, tailoring it to your own specific needs.
 - **Integrate with your stack**[^5] — Import and export model documentation and validation reports.
