--- a/site/developer/validmind-library.qmd
+++ b/site/developer/validmind-library.qmd
@@ -51,7 +51,7 @@ listing:
       description: "After you become familiar with the basics of the {{< var validmind.developer >}}, use it to develop a potential challenger model and run thorough model comparison tests, such as performance, diagnostic, and feature importance tests."
     - path: ../notebooks/tutorials/model_validation/4-finalize_validation_reporting.ipynb
       title: "4 — Finalize validation and reporting"
-      description: "Wrap up by learning how to include custom tests and verifying that all tests conducted during model development were run and reported accurately. By the end of this series, you will have a validation report complete with findings ready for review."
+      description: "Wrap up by learning how to include custom tests and verifying that all tests conducted during model development were run and reported accurately. By the end of this series, you will have a validation report complete with artifacts ready for review."
   - id: run-tests
     grid-columns: 2
     type: grid
