--- a/site/faq/_faq-attachments.qmd
+++ b/site/faq/_faq-attachments.qmd
@@ -1,8 +1,8 @@
-## Can we attach files to models, findings, or documentation? 
+## Can we attach files to models, artifacts, or documentation? 
 
 Yes, attachment type inventory fields are available for custom use.^[[Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)] Once created, attachment type fields allow you to upload supporting files to your model.
 
-- Out-of-the-box functionality is included for attaching files to model findings.
+- Out-of-the-box functionality is included for attaching files to model artifacts.
 - You can also attach images to documentation content blocks and comments. 
 
 By default, the [{{< fa hand >}} Customer Admin]{.bubble} role has sufficient permissions to manage model inventory fields.
