--- a/site/faq/faq-reporting.qmd
+++ b/site/faq/faq-reporting.qmd
@@ -19,7 +19,7 @@ categories: ["exports", "analytics", "reports", "ongoing monitoring", "validmind
 
 ## What analytic features are offered by {{< var vm.product >}}?
 
-- Out-of-the-box reports within the {{< var validmind.platform >}}[^1] are broken down by data on models and data on findings.
+- Out-of-the-box reports within the {{< var validmind.platform >}}[^1] are broken down by data on models and data on artifacts.
 - For each of the bar charts, you can hover for numerical breakdowns or click on individual bars to get a more detailed view.[^2]
 - You're also able to add custom report pages and analytic widgets to supplement the out-of-the-box reports provided.[^3] 
 
