--- a/site/faq/faq-testing.qmd
+++ b/site/faq/faq-testing.qmd
@@ -65,7 +65,7 @@ You use the {{< var validmind.developer >}} to run and log tests during model va
 
 To log tests as a validator with the {{< var validmind.developer >}}:
 
-- You must have the [{{< fa circle-check >}} Validator]{.bubble} role[^15] or another role with sufficient permissions to access models for validation, to review model documentation, and to work with validation reports and model findings.
+- You must have the [{{< fa circle-check >}} Validator]{.bubble} role[^15] or another role with sufficient permissions to access models for validation, to review model documentation, and to work with validation reports and model artifacts.
 - You must be the model validator, but not the model owner or model developer,[^16] for the model you want to log tests and update documentation for.
 
 ::: {.callout}
