--- a/site/faq/faq-validation.qmd
+++ b/site/faq/faq-validation.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Model validation and findings"
+title: "Model validation and artifacts"
 date: last-modified
 aliases:
   - /guide/faq-documentation.html
@@ -14,7 +14,7 @@ listing:
     - ../guide/model-validation/manage-validation-guidelines.qmd
     - ../guide/model-validation/preparing-validation-reports.qmd
     - ../guide/model-validation/working-with-artifacts.qmd
-categories: ["model validation", "validation guidelines", "model findings", "model documentation", "templates", "compliance", "validmind platform"]
+categories: ["model validation", "validation guidelines", "model artifacts", "findings", "model documentation", "templates", "compliance", "validmind platform"]
 ---
 
 ## Can I set up custom validation guidelines for use in templates?
@@ -28,23 +28,23 @@ By default, the [{{< fa hand >}} Customer Admin]{.bubble} role[^2] has sufficien
 
 ## How does {{< var vm.product >}} help with assessing model compliance?
 
-Use {{< var vm.product >}} to assess compliance of your models with guidelines based on analyzing evidence and findings,[^3] providing an unbiased starting point that enables more efficient discussions between validators and developers.
+Use {{< var vm.product >}} to assess compliance of your models with guidelines based on analyzing evidence and artifacts (findings),[^3] providing an unbiased starting point that enables more efficient discussions between validators and developers.
 
 Without leaving the {{< var validmind.platform >}}, you're able to:
 
 1. Link logged evidence to validation reports
-2. Link tracked findings to validation reports
+2. Link tracked artifacts to validation reports
 3. Provide granular compliance assessments for each section of your validation report
 
 By default, the [{{< fa circle-check >}} Validator]{.bubble} role has sufficient permissions to assess model compliance on validation reports.
 
-## What support does {{< var vm.product >}} offer for model findings?
+## What support does {{< var vm.product >}} offer for model artifacts?
 
-- Within the {{< var validmind.platform >}}, you're able to log findings at the model or the documentation section level.[^4]
-- On each finding, you're able to outline proposed remediation plans, attach supporting documentation, track the finding's status, attach the finding to a risk area and/or documentation section, designate a due date, and assign a resolution owner. 
-- You can also access a complete list of filterable findings logged across all your models, or look at only findings linked to a specific model.[^5]
+- Within the {{< var validmind.platform >}}, you're able to log artifacts at the model or the documentation section level.[^4]
+- On each artifact, you're able to outline proposed remediation plans, attach supporting documentation, track the artifact's status, attach the artifact to a risk area and/or documentation section, designate a due date, and assign a resolution owner. 
+- You can also access a complete list of filterable artifacts logged across all your models, or look at only artifacts linked to a specific model.[^5]
 
-By default, the [{{< fa circle-check >}} Validator]{.bubble} role has sufficient permissions to manage model findings.
+By default, the [{{< fa circle-check >}} Validator]{.bubble} role has sufficient permissions to manage model artifacts.
 
 {{< include _faq-attachments.qmd >}}
 
