--- a/site/faq/faq.qmd
+++ b/site/faq/faq.qmd
@@ -19,7 +19,7 @@ listing:
     - path: faq-documentation.qmd
       title: "Model documentation and templates"
     - path: faq-validation.qmd
-      title: "Model validation and findings"
+      title: "Model validation and artifacts"
     - path: faq-collaboration.qmd
       title: "Collaboration"
     - path: faq-reporting.qmd
