--- a/site/guide/attestation/review-attestation-questionnaires.qmd
+++ b/site/guide/attestation/review-attestation-questionnaires.qmd
@@ -64,7 +64,7 @@ When prompted on your dashboard:
    Refer to the model snapshot to ensure the attestation questionnaire is accurate:
 
    - **{{< fa cubes >}} Inventory** — Shows model information and recent activity such as comments, status changes, updates and test results.
-   - **{{< fa triangle-exclamation >}} Findings** — Shows model findings with details like title, severity, status, and due date.
+   - **{{< fa triangle-exclamation >}} Findings** — Shows model artifacts with details like title, severity, status, and due date.
    :::
 
 5. Accept or reject the attestation questionnaire:
