--- a/site/guide/configuration/customize-your-dashboard.qmd
+++ b/site/guide/configuration/customize-your-dashboard.qmd
@@ -77,14 +77,14 @@ Widgets display information at a glance on your dashboards.[^1]
 ##### {{< fa cubes >}} Model Inventory View
 Retrieves a saved model inventory view.[^2]
 
-##### {{< fa warning >}} Model Findings View
-Retrieves a saved findings view.[^3]
+##### {{< fa border-all >}} Model Artifacts View
+Retrieves a saved artifacts view.[^3]
 
 ##### {{< fa square-poll-vertical >}} Visualization
 Retrieves an analytics visualization.[^4]
 
-##### {{< fa table-cells-large >}} Other
-Retrieve a list of the latest model findings[^5] or recent activity.[^6]
+##### {{< fa flask >}} Other
+Retrieve a list of the latest model artifacts[^5] or recent activity.[^6]
 
 :::
 
