--- a/site/guide/guides.qmd
+++ b/site/guide/guides.qmd
@@ -197,14 +197,14 @@ First, set up your organization for validation, and customize reusable report te
 :::{#guides-validator}
 :::
 
-Then, prepare validation reports, work with findings and evidence, and collaborate with model developers within the {{< var validmind.platform >}}:
+Then, prepare validation reports, work with artifacts and evidence, and collaborate with model developers within the {{< var validmind.platform >}}:
 
 :::{#guides-model-validation}
 :::
 
 ## Reporting
 
-Review analytics or export your documents, model inventoru, and findings for external records:
+Review analytics or export your documents, model inventory, and artifacts for external records:
 
 :::{#guides-reports}
 :::
