--- a/site/guide/integrations/integrations-examples.qmd
+++ b/site/guide/integrations/integrations-examples.qmd
@@ -66,7 +66,7 @@ To create a Jira ticket when model validation requires attention:
          "key": "MODEL"
        },
        "summary": "Model validation failed: {{Model Name}}",
-       "description": "The model [{{Model Name}}|{{Model URL}}] failed validation. Review findings in ValidMind.",
+       "description": "The model [{{Model Name}}|{{Model URL}}] failed validation. Review artifacts in ValidMind.",
        "issuetype": {
          "name": "Bug"
        }
