--- a/site/guide/model-validation/_view-all-artifacts.qmd
+++ b/site/guide/model-validation/_view-all-artifacts.qmd
@@ -68,7 +68,7 @@ To view lists of other artifact types across all models:
 
 1. In the left sidebar, click **{{< fa triangle-exclamation >}} Findings**.
 
-1. Select a [finding type](/guide/model-validation/manage-artifact-types.qmd){target="_blank"} to view from the tabs:
+1. Select an [artifact type](/guide/model-validation/manage-artifact-types.qmd){target="_blank"} to view from the tabs:
 
    - Policy Exception
    - Model Limitation
