--- a/site/guide/monitoring/ongoing-monitoring.qmd
+++ b/site/guide/monitoring/ongoing-monitoring.qmd
@@ -67,7 +67,7 @@ Scenarios where ongoing monitoring is warranted:
 
 A robust ongoing monitoring plan is crucial for maintaining model accuracy and reliability. Model developers should start regular monitoring from the outset, ideally during the pre-approval phase of model development, refining the plan as new insights are gained. This plan should be included in the initial model documentation, with clear instructions for execution and use of results.[^2]
 
-As monitoring continues, it's important to report model status to key stakeholders, such as your model risk management committee. Regular updates with summary metrics will keep stakeholder informed of findings and emerging risks, highlighting significant trends or issues that may need action.
+As monitoring continues, it's important to report model status to key stakeholders, such as your model risk management committee. Regular updates with summary metrics will keep stakeholder informed of artifacts and emerging risks, highlighting significant trends or issues that may need action.
 
 Your ongoing monitoring plan should define:
 
