--- a/site/guide/reporting/_create-a-visualization.qmd
+++ b/site/guide/reporting/_create-a-visualization.qmd
@@ -19,17 +19,17 @@ a. Select a **[visualization type]{.smallcaps}**:
 
 a. Select a **[dataset]{.smallcaps}**:
 
-    - **Findings** — All finding types logged on models.^[[Working with artifacts](/guide/model-validation/working-with-artifacts.qmd)]
+    - **Findings** — All artifact types logged on models.^[[Working with artifacts](/guide/model-validation/working-with-artifacts.qmd)]
     - **Inventory Models** — Models logged in your inventory.^[[Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd)]
-    - **Model Limitations** — Logged Model Limitation type findings only.^[[Manage artifact types](/guide/model-validation/manage-artifact-types.qmd)]
-    - **Policy Exceptions** — Logged Policy Exception type findings only.
-    - **Validation Issues** — Logged Validation Issue type findings only.
+    - **Model Limitations** — Logged Model Limitation type artifacts only.^[[Manage artifact types](/guide/model-validation/manage-artifact-types.qmd)]
+    - **Policy Exceptions** — Logged Policy Exception type artifacts only.
+    - **Validation Issues** — Logged Validation Issue type artifacts only.
 
 a. Select the visualization configuration options to apply to the dataset.^[[Visualization configuration options](/guide/reporting/manage-custom-reports.qmd#visualization-configuration-options)]
 
 a. When you are done configuring your dataset, click **Add Visualization** to insert your custom widget onto the analytics page.
 
-For example, to create an open findings visualization in stacked bar chart format for all findings logged, for average severity level, grouped by business unit (x-axis) and risk area (y-axis), you would set:
+For example, to create an open artifacts visualization in stacked bar chart format for all artifacts logged, for average severity level, grouped by business unit (x-axis) and risk area (y-axis), you would set:
 
 - **[visualization type]{.smallcaps}** — `Bar Chart`
 - **[dataset]{.smallcaps}** — `Findings`
@@ -68,11 +68,11 @@ a. Select a **[visualization type]{.smallcaps}**:
 
 a. Select a **[dataset]{.smallcaps}**:
 
-    - **Findings** — [All finding types logged on models](/guide/model-validation/working-with-artifacts.qmd){target="_blank"}.
+    - **Findings** — [All artifact types logged on models](/guide/model-validation/working-with-artifacts.qmd){target="_blank"}.
     - **Inventory Models** — [Models logged in your inventory](/guide/model-inventory/working-with-model-inventory.qmd){target="_blank"}.
-    - **Model Limitations** — Logged Model Limitation type findings only.
-    - **Policy Exceptions** — Logged Policy Exception type findings only.
-    - **Validation Issues** — Logged Validation Issue type findings only.
+    - **Model Limitations** — Logged Model Limitation type artifacts only.
+    - **Policy Exceptions** — Logged Policy Exception type artifacts only.
+    - **Validation Issues** — Logged Validation Issue type artifacts only.
 
 a. Select the [visualization configuration options](/guide/reporting/manage-custom-reports.qmd#visualization-configuration-options){target="_blank"} to apply to the dataset.
 
