--- a/site/guide/reporting/_reports-grouping.qmd
+++ b/site/guide/reporting/_reports-grouping.qmd
@@ -1,2 +1,2 @@
 [grouping]{.smallcaps}
-: The model or finding fields that the visualization should group the data by. 
+: The model or artifact fields that the visualization should group the data by. 
