--- a/site/guide/reporting/_reports-metrics.qmd
+++ b/site/guide/reporting/_reports-metrics.qmd
@@ -1,5 +1,5 @@
 [metrics]{.smallcaps}
-: The model or finding field that the visualization should retrieve data for: 
+: The model or artifact field that the visualization should retrieve data for: 
 
 - For `string` type fields, you can retrieve a `Count` or `Count %`.
 - For `number` type fields, you can retrieve any of the following: `Count`, `Count %`, `Sum`, `Average`, `Min`, `Max`
