--- a/site/guide/reporting/_view-report-data.qmd
+++ b/site/guide/reporting/_view-report-data.qmd
@@ -1,6 +1,6 @@
 :::: {.content-visible unless-format="revealjs"}
 ::: {.callout}
-Reports will not include data or findings from archived models.^[[Archive and delete models](/guide/model-inventory/archive-delete-models.qmd)]
+Reports will not include data or artifacts from archived models.^[[Archive and delete models](/guide/model-inventory/archive-delete-models.qmd)]
 :::
 
 1. In the left sidebar, click **{{< fa square-poll-vertical >}} Analytics**.
@@ -9,14 +9,14 @@ Reports will not include data or findings from archived models.^[[Archive and de
 
 1. For each of the bar or pie charts, hover for numerical breakdowns or click on individual sections to get a more detailed view.
 
-    For example, to see all findings related to specific risk area:
+    For example, to see all validation issues related to specific risk area:
 
     a. Click on the **Validation Issues** tab.
     b. Under **Validation Issues by Risk Area**, click on the risk area you want more details for.
-    c. On the page that opens, the applicable findings are listed:
-        - Filter this list of findings^[[Filter and sort artifacts](/guide/model-validation/view-filter-artifacts.qmd#filter-and-sort-artifacts)]
-        - Or customize column headers that display on this findings view^[[Customize artifact layouts](/guide/model-validation/customize-artifact-layouts.qmd)]
-    d. To get more details on the finding itself, click on the title of the finding to take you to the **{{< fa triangle-exclamation >}} Model Findings** section for the specific model the finding applies to.
+    c. On the page that opens, the applicable validation issues are listed:
+        - Filter this list of validation issues^[[Filter and sort artifacts](/guide/model-validation/view-filter-artifacts.qmd#filter-and-sort-artifacts)]
+        - Or customize column headers that display on this validation issue view^[[Customize artifact layouts](/guide/model-validation/customize-artifact-layouts.qmd)]
+    d. To get more details on the validation issue itself, click on the title of the validation issue to take you to the **{{< fa triangle-exclamation >}} Validation Issues** section for the specific model the issue applies to.
 
 ::::
 
@@ -28,13 +28,13 @@ Reports will not include data or findings from archived models.^[[Archive and de
 
 3. For each of the bar or pie charts, hover for numerical breakdowns or click on individual sections to get a more detailed view.
 
-    For example, to see all findings related to specific risk area:
+    For example, to see all validation issues related to specific risk area:
 
     a. Click on the **Validation Issues** tab.
     b. Under **Validation Issues by Risk Area**, click on the risk area you want more details for.
-    c. On the page that opens, the applicable findings are listed:
-        - [Filter this list of findings](/guide/model-validation/view-filter-artifacts.qmd#filter-and-sort-artifacts){target="_blank"}
-        - Or customize column headers that display on this [findings view](/guide/model-validation/customize-artifact-layouts.qmd){target="_blank"}
-    d. To get more details on the finding itself, click on the title of the finding to take you to the **{{< fa triangle-exclamation >}} Model Findings** section for the specific model the finding applies to.
+    c. On the page that opens, the applicable validation issues are listed:
+        - [Filter this list of validation issues](/guide/model-validation/view-filter-artifacts.qmd#filter-and-sort-artifacts){target="_blank"}
+        - Or customize column headers that display on this [validation issue view](/guide/model-validation/customize-artifact-layouts.qmd){target="_blank"}
+    d. To get more details on the validation issue itself, click on the title of the issue to take you to the **{{< fa triangle-exclamation >}} Validation Issues** section for the specific model the validation issue applies to.
 
 ::::
