--- a/site/guide/reporting/generating-exports.qmd
+++ b/site/guide/reporting/generating-exports.qmd
@@ -14,4 +14,4 @@ listing:
       - export-artifacts.qmd
 ---
 
-Export your documents, model inventory, and findings for use outside of the {{< var validmind.platform >}}.
+Export your documents, model inventory, and artifacts for use outside of the {{< var validmind.platform >}}.
