--- a/site/guide/reporting/working-with-analytics.qmd
+++ b/site/guide/reporting/working-with-analytics.qmd
@@ -16,17 +16,17 @@ listing:
       - manage-custom-reports.qmd
 ---
 
-Analytical reports allow you to gain quick insights into your model validation efforts. Reports detail critical findings, risk exposure, and compliance status to ensure effective oversight and management of model-related risks. 
+Analytical reports allow you to gain quick insights into your model validation efforts. Reports detail critical artifacts, risk exposure, and compliance status to ensure effective oversight and management of model-related risks. 
 
 #### Typical uses for reports
 
-- **Executive summaries** — Gain a high-level overview of model validation activities, focusing on critical findings and risk exposure.
-- **Model tracking** — Get quick insights into each model's validation findings, highlighting any major issues or deficiencies.
+- **Executive summaries** — Gain a high-level overview of model validation activities, focusing on critical artifacts and risk exposure.
+- **Model tracking** — Get quick insights into each model's validation artifacts, highlighting any major issues or deficiencies.
 - **Compliance review** — Find information on compliance with relevant regulatory requirements and internal policies.
-- **Remediation tracking** — See the status of actions taken or proposed to address validation findings and mitigate identified risks.
+- **Remediation tracking** — See the status of actions taken or proposed to address validation artifacts and mitigate identified risks.
 - **Risk assessment** — Find summaries of the risks associated with each model, including model limitations, model stability and robustness issues, needed model adjustments, and much more.
 
-Reports are primarily designed for model validators or Chief Risk Officers (CROs) who require an understanding of findings related to model validation activities.
+Reports are primarily designed for model validators or Chief Risk Officers (CROs) who require an understanding of artifacts related to model validation activities.
 
 ::: {.attn}
 
@@ -34,7 +34,7 @@ Reports are primarily designed for model validators or Chief Risk Officers (CROs
 
 - [x] {{< var link.login >}}
 - [x] There are models registered in the model inventory.[^1]
-- [x] There are validation issue type findings logged on any model.[^2]
+- [x] There are validation issue type artifacts logged on any model.[^2]
 
 :::
 
@@ -75,7 +75,7 @@ Number of Models by Business Unit and Tier
 : Count of your model volume by business unit[^4] further broken down by risk tier. Assists you in pinpointing where in the organization resources should be concentrated on, along with the materiality of risk that unit may pose based on the models they are responsible for. 
 
 Number of Models by Stage and Business Unit
-: Count of your model volume by stage[^5] further broken down by business unit. Assists you in pinpointing where in the organization resources may need to be focused, based on the progress and severity of findings. 
+: Count of your model volume by stage[^5] further broken down by business unit. Assists you in pinpointing where in the organization resources may need to be focused, based on the progress and severity of artifacts. 
 
 Avg. Number of Days Models Spend in a Stage
 : Average count of days your models spend in a certain stage further broken down by business unit. Assists you in pinpointing what point of your model risk management process resources should be concentrated on, along with where in the organization your resources should be allotted to. 
@@ -83,19 +83,19 @@ Avg. Number of Days Models Spend in a Stage
 #### 2. Reports on validation issues
 
 Total Validation Issues, Open Validation Issues, Closed Validation Issues, Past Due Validation Issues
-: Count of your total validation issue type findings,[^6] currently open validation issues, currently past due validation issues, and previous validation issues now closed.
+: Count of your total validation issue type artifacts,[^6] currently open validation issues, currently past due validation issues, and previous validation issues now closed.
 
 Validation Issues by Risk Area
 : Identifies issues based on the type of risk they pose to the organization, such as model limitations, data quality issues, regulatory compliance, and more. Helps in understanding the risk landscape for your models and risk areas requiring attention or improvement.
 
 Validation Issues by Status
-: Sorts validation issue type findings based on their resolution status, such as open, closed, or past due. Provides a snapshot of the validation process, highlighting which issues have been addressed, which are currently being worked on, and which are yet to be tackled.
+: Sorts validation issue type artifacts based on their resolution status, such as open, closed, or past due. Provides a snapshot of the validation process, highlighting which issues have been addressed, which are currently being worked on, and which are yet to be tackled.
 
 Validation Issues by Business Unit
 : Segmented according to different divisions or departments within your organization, such as Finance, Marketing, and more. Assists you in pinpointing where in the organization model-related issues are occurring, facilitating more targeted resolution, if necessary.
 
 Validation Issues by Model
-: Specific to individual models, details the validation issue type findings for each model, including any errors, limitations, or assumptions that may affect the model's performance. This helps in assessing the reliability and accuracy of each model.
+: Specific to individual models, details the validation issue type artifacts for each model, including any errors, limitations, or assumptions that may affect the model's performance. This helps in assessing the reliability and accuracy of each model.
 
 :::
 
@@ -141,7 +141,7 @@ Rearrange report widgets on your analytics pages, including your custom pages:[^
 
 [^5]: [Manage model stages](/guide/workflows/manage-model-stages.qmd)
 
-[^6]: [Manage artifact types](/guide/model-validation/manage-artifact-types.qmd#available-finding-types)
+[^6]: [Manage artifact types](/guide/model-validation/manage-artifact-types.qmd#available-artifact-types)
 
 [^7]: [Customize your dashboard](/guide/configuration/customize-your-dashboard.qmd#manage-widgets)
 
