--- a/site/guide/workflows/_add-new-workflows.qmd
+++ b/site/guide/workflows/_add-new-workflows.qmd
@@ -8,7 +8,7 @@ To add a new blank workflow:
 1. Select the tab for the type of workflow to add:
 
     - **Model Workflows** — Workflows that apply to models in your inventory.^[[Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd)]
-    - **Finding Workflows** — Workflows that apply to logged findings.^[[Working with artifacts](/guide/model-validation/working-with-artifacts.qmd)]
+    - **Finding Workflows** — Workflows that apply to logged artifacts.^[[Working with artifacts](/guide/model-validation/working-with-artifacts.qmd)]
 
 ::: {.panel-tabset}
 
@@ -38,9 +38,9 @@ a. On the Add New Finding Workflow modal, enter in a **[title]{.smallcaps}** and
 a. Under **[workflow start]{.smallcaps}**, select when the workflow should be initiated:
 
     - **Manually** — Start this workflow manually.^[[Initiate workflows](/guide/workflows/manage-workflows.qmd#initiate-workflows)]
-    - **On Finding Registration** — Start this workflow when a finding is logged on a model.[^on-finding-registration]
+    - **On Finding Registration** — Start this workflow when a artifact is logged on a model.[^on-artifact-registration]
 
-a. Select the **[finding type]{.smallcaps}**^[[Manage artifact types](/guide/model-validation/manage-artifact-types.qmd)] this workflow applies to.
+a. Select the **[artifact type]{.smallcaps}**^[[Manage artifact types](/guide/model-validation/manage-artifact-types.qmd)] this workflow applies to.
 
 a. Under **[workflow expected duration]{.smallcaps}**, define the SLA for the workflow based on the start date in days, weeks, months, or years.
 
@@ -59,9 +59,9 @@ a. Click **Add Finding Workflow** to save your blank workflow, and then [configu
 
     :::
 
-[^on-finding-registration]:
+[^on-artifact-registration]:
 
-    ::: {.callout title="Please note that only one workflow can be configured to initiate on registration for each type of finding."}
+    ::: {.callout title="Please note that only one workflow can be configured to initiate on registration for each type of artifact."}
     <br>
     [Add and manage artifacts](/guide/model-validation/add-manage-artifacts.qmd)
 
@@ -84,7 +84,7 @@ a. Click **Add Finding Workflow** to save your blank workflow, and then [configu
 1. Select the tab for the type of workflow to add:
 
     - **Model Workflows** — Workflows that apply to models in your inventory.
-    - **Finding Workflows** — Workflows that apply to logged findings.
+    - **Finding Workflows** — Workflows that apply to logged artifacts.
 
 #### Add Model Workflows
 
@@ -112,9 +112,9 @@ a. On the Add New Finding Workflow modal, enter in a **[title]{.smallcaps}** and
 a. Under **[workflow start]{.smallcaps}**, select when the workflow should be initiated:
 
     - **Manually** — Start this workflow manually.
-    - **On Finding Registration** — Start this workflow when a finding is logged on a model.
+    - **On Finding Registration** — Start this workflow when a artifact is logged on a model.
 
-a. Select the **[finding type]{.smallcaps}**
+a. Select the **[artifact type]{.smallcaps}**
 
 a. Under **[workflow expected duration]{.smallcaps}**, define the SLA for the workflow based on the start date in days, weeks, months, or years.
 
