--- a/site/guide/workflows/_reset-workflows.qmd
+++ b/site/guide/workflows/_reset-workflows.qmd
@@ -21,9 +21,9 @@ To reset a workflow to the beginning:
 
 1. On the confirmation page, toggle **[restart workflow after aborting]{.smallcaps}** on, then click **{{< fa arrow-right >}} Yes, Abort Workflow** to restart your workflow.
 
-#### On findings
+#### On artifacts
 
-1. On the details page of your finding,^[[View and filter artifacts](/guide/model-validation/view-filter-artifacts.qmd#view-artifacts)] locate the [active workflows]{.smallcaps} section.
+1. On the details page of your artifact,^[[View and filter artifacts](/guide/model-validation/view-filter-artifacts.qmd#view-artifacts)] locate the [active workflows]{.smallcaps} section.
 
 1. Click on the name of the workflow you'd like to reset to open that specific workflow's details.
 
@@ -55,9 +55,9 @@ To reset a workflow to the beginning:
 
 1. On the confirmation page, toggle **[restart workflow after aborting]{.smallcaps}** on, then click **{{< fa arrow-right >}} Yes, Abort Workflow** to restart your workflow.
 
-#### On findings
+#### On artifacts
 
-1. On the [details page of your finding](/guide/model-validation/view-filter-artifacts.qmd#view-artifacts){target="_blank"}, locate the [active workflows]{.smallcaps} section.
+1. On the [details page of your artifact](/guide/model-validation/view-filter-artifacts.qmd#view-artifacts){target="_blank"}, locate the [active workflows]{.smallcaps} section.
 
 1. Click on the name of the workflow you'd like to reset to open that specific workflow's details.
 
