--- a/site/guide/workflows/_review-active-workflows.qmd
+++ b/site/guide/workflows/_review-active-workflows.qmd
@@ -22,16 +22,16 @@ To review details for workflows currently active:
     - **Findings** — Findings for that model created within the duration of that workflow's runtime.
     - **Workflow**^[Hover over a workflow step to view an animation of the steps connecting to and from that step.] — Overview of the entire workflow. The current workflow step is highlighted on this view.
 
-#### On findings
+#### On artifacts
 
-1. On the details page of your finding,^[[View and filter artifacts](/guide/model-validation/view-filter-artifacts.qmd#view-artifacts)] locate the [active workflows]{.smallcaps} section.
+1. On the details page of your artifact,^[[View and filter artifacts](/guide/model-validation/view-filter-artifacts.qmd#view-artifacts)] locate the [active workflows]{.smallcaps} section.
 
 1. Click on the name of any active workflow to review that specific workflow's details.
 
 1. Click on the tab you would like to review:
 
     - **Details** — Name and description (if present) of the workflow, the workflow's status and progress (if applicable), when it was created, and when it was started.
-    - **Activity** — History of updates to the workflow on that finding, including notes submitted during transitions.[^notes]
+    - **Activity** — History of updates to the workflow on that artifact, including notes submitted during transitions.[^notes]
     - **Workflow**^[Hover over a workflow step to view an animation of the steps connecting to and from that step.] — Overview of the entire workflow. The current workflow step is highlighted on this view.
 
 
@@ -91,16 +91,16 @@ To review details for workflows currently active:
     - **Findings** — Findings for that model created within the duration of that workflow's runtime.
     - **Workflow** — Overview of the entire workflow. The current workflow step is highlighted on this view.
 
-#### On findings
+#### On artifacts
 
-1. On the [details page of your finding](/guide/model-validation/view-filter-artifacts.qmd#view-artifacts){target="_blank"}, locate the [active workflows]{.smallcaps} section.
+1. On the [details page of your artifact](/guide/model-validation/view-filter-artifacts.qmd#view-artifacts){target="_blank"}, locate the [active workflows]{.smallcaps} section.
 
 1. Click on the name of any active workflow to review that specific workflow's details.
 
 1. Click on the tab you would like to review:
 
     - **Details** — Name and description (if present) of the workflow, the workflow's status and progress (if applicable), when it was created, and when it was started.
-    - **Activity** — History of updates to the workflow on that finding, including notes submitted during transitions.
+    - **Activity** — History of updates to the workflow on that artifact, including notes submitted during transitions.
     - **Workflow** — Overview of the entire workflow. The current workflow step is highlighted on this view.
 
 ::::
