--- a/site/guide/workflows/manage-workflow-tasks.qmd
+++ b/site/guide/workflows/manage-workflow-tasks.qmd
@@ -16,7 +16,7 @@ Tasks will only appear in your inbox if the workflow step[^1] is set up to displ
 - [x] {{< var link.login >}}
 - [x] There are models registered in the model inventory.[^4]
 - [x] Model stages have already been customized for use in workflows.[^5]
-- [x] Workflows have already been set up for use with your models or findings.[^6]
+- [x] Workflows have already been set up for use with your models or artifacts.[^6]
 - [x] You are a assigned role with sufficient permissions to transition workflows into their next states.[^7]
 
 :::
@@ -27,7 +27,7 @@ Tasks will only appear in your inbox if the workflow step[^1] is set up to displ
 
 2. Select the **Tasks** tab.
 
-3. From the in-{{< var vm.platform >}} task list, view your incomplete tasks, access models or findings attached to tasks, and transition workflows into their next states:
+3. From the in-{{< var vm.platform >}} task list, view your incomplete tasks, access models or artifacts attached to tasks, and transition workflows into their next states:
 
 ::: {.panel-tabset}
 
@@ -35,9 +35,9 @@ Tasks will only appear in your inbox if the workflow step[^1] is set up to displ
 
 Tasks are listed with the following information:
 
-- The name of the model or finding the workflow is attached to
+- The name of the model or artifact the workflow is attached to
 - The current workflow state of the workflow[^8]
-- The name of the workflow attached to the model or finding[^9]
+- The name of the workflow attached to the model or artifact[^9]
 - The due date of the workflow, calculated from the workflow's expected duration
 - Action items associated with that task
 
@@ -45,7 +45,7 @@ To show older tasks, scroll down to the bottom and click **Load More**.
 
 ### Access details
 
-To view the details of a model or finding attached to a workflow task, click the button displaying the name of the model or finding.
+To view the details of a model or artifact attached to a workflow task, click the button displaying the name of the model or artifact.
 
 ### Transition workflows
 
