--- a/site/about/glossary/_attestation.qmd
+++ b/site/about/glossary/_attestation.qmd
@@ -2,7 +2,7 @@ attestation
 : A formal process where model owners certify key model information at a specific time. Reviewed by the second line of defense, typically a validator, attestation is part of your audit trail and confirms that governance, documentation, and control requirements are met.
 
 attestation instance
-: The invocation of the attestation process on the {{< var validmind.platform >}}. Created when the attestation is triggered by the schedule you set up, it includes a snapshot with model activity and findings, questionnaire responses and review status, forming a full record of the review and approval process. 
+: The invocation of the attestation process on the {{< var validmind.platform >}}. Created when the attestation is triggered by the schedule you set up, it includes a snapshot with model activity and artifacts, questionnaire responses and review status, forming a full record of the review and approval process. 
 
 attestation period  
 : The time window during which attestation is active, with fixed start and end dates. Each period creates an unchanging model snapshot. Periods are usually scheduled quarterly or annually and can align with regulatory or internal cycles.
@@ -14,4 +14,4 @@ execution schedule
 : The mechanism, manual or automated, that starts the attestation process based on set periods. It creates attestation instances, triggers snapshots and begins the workflow for model owners and validators.
 
 snapshot  
-: A fixed capture of model data at a specific time. It includes optional custom fields and related findings and stays unchanged throughout the attestation, ensuring historical accuracy.
+: A fixed capture of model data at a specific time. It includes optional custom fields and related artifacts and stays unchanged throughout the attestation, ensuring historical accuracy.
