--- a/site/guide/attestation/complete-attestation-questionnaires.qmd
+++ b/site/guide/attestation/complete-attestation-questionnaires.qmd
@@ -55,7 +55,7 @@ When prompted on your dashboard:
    Refer to the model snapshot to ensure the attestation questionnaire is accurate:
 
    - **{{< fa cubes >}} Inventory** — Shows model information and recent activity such as comments, status changes, updates and test results.
-   - **{{< fa triangle-exclamation >}} Findings** — Shows model findings with details like title, severity, status, and due date.
+   - **{{< fa triangle-exclamation >}} Findings** — Shows model artifacts with details like title, severity, status, and due date.
    :::
 
 5. Verify that your answers are complete and click **Submit for Review**.
