--- a/site/guide/reporting/view-report-data.qmd
+++ b/site/guide/reporting/view-report-data.qmd
@@ -3,7 +3,7 @@ title: "View report data"
 date: last-modified
 ---
 
-Review detailed data on your models or model findings within the {{< var validmind.platform >}}. 
+Review detailed data on your models or artifacts within the {{< var validmind.platform >}}. 
 
 ::: {.attn}
 
@@ -11,7 +11,7 @@ Review detailed data on your models or model findings within the {{< var validmi
 
 - [x] {{< var link.login >}}
 - [x] There are models registered in the model inventory.[^1]
-- [x] There are findings logged on any model.[^2]
+- [x] There are artifacts logged on any model.[^2]
 
 :::
 
