--- a/site/guide/workflows/configure-workflows.qmd
+++ b/site/guide/workflows/configure-workflows.qmd
@@ -69,9 +69,9 @@ You can edit a workflow in several ways:
 
 5. On the workflow's detail modal, click on the **{{< fa ellipsis-vertical >}}** in the top-right hand corner and select **{{< fa pencil >}} Edit Workflow**.
 
-#### Via workflows applied to findings
+#### Via workflows applied to artifacts
 
-1. On the details page of your finding,[^4] locate the [active workflows]{.smallcaps} section.
+1. On the details page of your artifact,[^4] locate the [active workflows]{.smallcaps} section.
 
 2. Click on the name of the workflow you'd like to abort to open that specific workflow's details.
 
